Make some readability changes and add left padding setting to row headers